row_ins_foreign_report_add_err(): When printing the parent record, use the index in the parent table rather than the index in the child table. (Bug #15550)

innodb.test, innodb.result: Add test cases for foreign key errors.